--- a/preamble.tex
+++ b/preamble.tex
@@ -4,7 +4,7 @@
 \usepackage{marginnote}
 \usepackage{enumitem}
 \usepackage[style=apa]{biblatex}
-\usepackage{float}
+\usepackage{float,subcaption}
 \usepackage{tikz}
 \usepackage{siunitx}
 \usepackage{amsmath,amssymb}
@@ -32,12 +32,34 @@
 \addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
 
+\usetikzlibrary{decorations,arrows.meta,bending}
 \colorlet{rex}{magenta}
+\colorlet{gax}{gray!50}
+\colorlet{orx}{orange!90!yellow!95!black!90}
 
 \sisetup{range-phrase=-,range-units=single}
 \DeclareSIUnit{\calorie}{cal}
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 \setcharge{extra sep=3pt}
+\pgfdeclaredecoration{ddbond}{initial}{
+    \state{initial}[width=3.5pt]{
+        \pgfpathlineto{\pgfpoint{4pt}{0pt}}
+        \pgfpathmoveto{\pgfpoint{0pt}{2pt}}
+        \pgfpathlineto{\pgfpoint{1pt}{2pt}}
+        \pgfpathmoveto{\pgfpoint{3pt}{2pt}}
+        \pgfpathlineto{\pgfpoint{4pt}{2pt}}
+        \pgfpathmoveto{\pgfpoint{4pt}{0pt}}
+    }
+    \state{final}{
+        \pgfpathlineto{\pgfpointdecoratedpathlast}
+    }
+}
+\tikzset{
+    lddbond/.style={decorate,decoration=ddbond},
+    rddbond/.style={decorate,decoration={ddbond,mirror}}
+}
+
+\newcommand{\e}[1][]{\text{e}^{#1}}
 
 \usepackage{subfiles}
