--- a/preamble.tex
+++ b/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{fancyhdr}
 \usepackage{marginnote}
 \usepackage{enumitem}
+\usepackage{xr}
 \usepackage[style=apa]{biblatex}
 \usepackage{float,subcaption}
 \usepackage{tikz}
@@ -32,7 +33,7 @@
 \addbibresource{../main.bib}
 \DefineBibliographyStrings{english}{bibliography={References}}
 
-\usetikzlibrary{decorations,arrows.meta,bending}
+\usetikzlibrary{decorations,arrows.meta,bending,calc}
 \colorlet{rex}{magenta}
 \colorlet{gax}{gray!50}
 \colorlet{orx}{orange!90!yellow!95!black!90}
